<resources>
    <string name="app_name">Botanica</string>

    <string name="invalid_email_title">Invalid email</string>
    <string name="invalid_email_warning">We\'re sorry but this doesn\'t look like a valid email address.</string>

    <string name="search_section">Search plant</string>
    <string name="add_section">Add plant</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="username">Nume Utilizator</string>
    <string name="device_has_no_internet_connectivity_title">No connectivity</string>
    <string name="device_has_no_internet_connectivity_text">Your device has no internet connectivity</string>
    <string name="ok">Ok</string>
    <string name="action_settings">Settings</string>
    <string name="title_format">%1$s (%2$s)</string>
    <string name="description">Descriere</string>
    <string name="plant_properties">Proprietati / Utilizare</string>
    <string name="plant_parts">Partile folosite</string>
</resources>
