<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="@drawable/dalie">

    <TextView
        android:layout_marginTop="56dp"
        android:text="@string/app_name"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/botanica_green"
        android:textSize="56sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ImageView
        android:layout_marginTop="56dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/botanica_font_logo" />

    <LinearLayout
        android:id="@+id/login_wrapper"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email"
            android:layout_marginTop="24dp"
            android:hint="@string/email"
            android:singleLine="true"
            android:textColorHint="@android:color/white"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/login_button"
            android:layout_marginTop="24dp"
            android:text="@string/login"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
