<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/all_wrapper"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.gms.maps.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <RelativeLayout
                android:id="@+id/information_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/plant_image_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:background="@color/grey_dark"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/plant_name"
                        android:textSize="24sp"
                        android:textStyle="bold|italic"
                        android:layout_marginTop="12dp"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <com.softvision.botanica.ui.views.custom.TileImageView
                        android:id="@+id/plant_image"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_width="150dp"
                        android:layout_height="200dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/plant_description_title"
                    android:text="@string/description"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:layout_marginLeft="12dp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="24dp"
                    android:layout_below="@id/plant_image_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/plant_description"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="12dp"
                    android:layout_below="@id/plant_description_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/plant_properties_title"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="24dp"
                    android:layout_below="@id/plant_description"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:text="@string/plant_properties"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/plant_properties"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_below="@id/plant_properties_title"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/plant_parts_title"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="24dp"
                    android:layout_below="@id/plant_properties"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:text="@string/plant_parts"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/plant_parts"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_below="@id/plant_parts_title"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>